--- a/.github/workflows/release-drafter.yml
+++ b/.github/workflows/release-drafter.yml
@@ -26,4 +26,4 @@ jobs:
         #   config-name: my-config.yml
         #   disable-autolabeler: true
         env:
-          GITHUB_TOKEN: ${{ secrets.NEWBE_PAT }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
