--- a/src/Newbe.BookmarkManager/wwwroot/manifest.json
+++ b/src/Newbe.BookmarkManager/wwwroot/manifest.json
@@ -1,7 +1,7 @@
 ﻿{
   "manifest_version": 2,
   "name": "Amazing Favorites",
-  "version": "0.7.0",
+  "version": "0.6.3",
   "description": "Amazing Favorites help you to manage you bookmarks efficiently",
   "background": {
     "page": "index.html?path=background",
@@ -15,14 +15,14 @@
   "content_security_policy": "script-src 'self' 'unsafe-eval' 'wasm-eval' 'sha256-v8v3RKRPmN4odZ1CWM5gw80QKPCCWMcpNeOmimNL2AA=' 'sha256-j0z5Z6xOoSHTeg6zVPMoHNt5D5v+7IWgT9m5uC9mrGg=' 'sha256-SQC3opwSNRzP3qBB9CWB9I3347XafmEdFyNx7sU8EhI=' https://js.monitor.azure.com/scripts/b/ai.2.min.js ; object-src 'self'",
   "web_accessible_resources": [
     "framework/*",
+    "BrowserExtensionScripts/*",
     "content/*"
   ],
   "permissions": [
     "tabs",
     "bookmarks",
     "commands",
-    "identity",
-    "storage"
+    "identity"
   ],
   "commands": {
     "open-manager-ui": {
